--- a/blog/templates/blog/blogs_with_date.html
+++ b/blog/templates/blog/blogs_with_date.html
@@ -3,5 +3,5 @@
 
 {% block blog_list_title %}
     <p class="float-right mb-0"><span class="mx-2 text-info"><a href="{% url 'blog_list' %}">查看全部博客</a></span></p>
-    <h1 class="f-17"><strong>文章分类：{{ blogs_with_date }}</strong></h1>
+    <h1 class="f-17"><strong>日期归档：{{ blogs_with_date }}</strong></h1>
 {% endblock %}
