--- a/templates/base.html
+++ b/templates/base.html
@@ -8,15 +8,15 @@
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap and font-awesome CSS -->
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'bootstrap/css/font-awesome.min.css' %}" >
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" >
     <!-- blog CSS -->
-    <link href="{% static 'bootstrap/css/base.css' %}" rel="stylesheet">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'bootstrap/js/headroom.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'bootstrap/js/popper.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/headroom.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
     {% block header_extends %}{% endblock %}
 </head>
 <body>
@@ -37,11 +37,9 @@
                     <a class="nav-link py-md-3 {% block nav_home_active %}{% endblock %}" href="{% url 'home' %}"><i class="fa fa-home mr-1"></i>首页<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item mr-2">
-                    <a class="nav-link py-md-3 {% block nav_blog_active %}{% endblock %}" href="{% url 'blog_list' %}"><i class="fa fa-sitemap mr-1"></i>博客</a>
+                    <a class="nav-link py-md-3 {% block nav_blog_active %}{% endblock %}" href="{% url 'blog_list' %}"><i class="fa fa-book mr-1"></i>博客</a>
                 </li>
-    {#            <li class="nav-item mr-2">#}
-    {#                <a class="nav-link py-md-3 {% block nav_blog_active %}{% endblock %}" href="{% url 'blog_list' %}"><i class="fa fa-book mr-2 f-17"></i>归档</a>#}
-    {#            </li>#}
+
                 <li class="nav-item mr-xl-5 ">
                     <a class="nav-link py-md-3 {% block nav_adout_active %}{% endblock %}" href="{% url 'about' %}"><i class="fa fa-anchor mr-1"></i>关于</a>
                 </li>
