--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    我的网站|关于
+    Minguk Blog|关于
 {% endblock %}
 
 {% block nav_adout_active %}active{% endblock %}
