--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}我的网站{% endblock %}
+{% block title %}我的博客{% endblock %}
 {% block nav_blog_active %}active{% endblock %}
 
 {% load staticfiles %}
