--- a/templates/404.html
+++ b/templates/404.html
@@ -1,9 +1,22 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block title %}
-    我的网站|页面找不到
+    Minguk Blog|页面找不到
 {% endblock %}
 
 {% block content %}
-    404，找不到页面！迷路啦？
+<div class="container">
+    <div class="row errorpage">
+        <div class="col align-self-center error-img text-center">
+            <div class="errorimg">
+                <img class="img-fluid" src="{% static 'img/404.png'%}">
+            </div>
+            <div class="errormsg">
+                <h3>哇哦！你好像访问到了异次元世界...</h3>
+                <a href="javascript:history.go(-1);">返回地球</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
