--- a/templates/500.html
+++ b/templates/500.html
@@ -5,5 +5,13 @@
 {% endblock %}
 
 {% block content %}
-    500，发生错误！我已经发送邮件给管理员了
+<div class="container">
+    <div class="row errorpage">
+        <div class="col align-self-center error-img text-center">
+            <div class="errormsg">
+                <h3>500，发生错误！我已经发送邮件给管理员了</h3>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
